--- a/src/assets/style/partials/general.scss
+++ b/src/assets/style/partials/general.scss
@@ -5,13 +5,18 @@
 @import 'node_modules/fontsource/monserrat/700.css';
 
 // inclusione  variables 
-@use './variabiles' as*;
+// @use'./variabiles' as*;
 
 
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+}
+
+body {
+    background-color: #D48F38;
+    font-family: 'Montserrat Variable', sans-serif;
 }
 
 // layout
