feat:(add style and template with bts in main CardCharactersList)

--- a/src/assets/style/partials/general.scss
+++ b/src/assets/style/partials/general.scss
@@ -21,8 +21,10 @@ body {
 
 // layout
 .container {
-    max-width: 1200px;
+    width: 100vw;
+    height: 100vh;
     margin: 0 auto;
     padding: 0 1rem;
+    background-color: #fff;
 
 }
