--- a/src/assets/style/partials/general.scss
+++ b/src/assets/style/partials/general.scss
@@ -17,14 +17,21 @@
 body {
     background-color: #D48F38;
     font-family: 'Montserrat Variable', sans-serif;
+    font-weight: 700;
 }
 
 // layout
 .container {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     margin: 0 auto;
     padding: 0 1rem;
     background-color: #fff;
+
+}
+
+
+img {
+    max-width: 100%;
 
 }
